tests/error/undef_parent.gw
#! [contains] unknown type
class C extends Undefined {}
var C c;
<<< c >>>;
